  ban version, flood from unknown connection), there was a small delay before.
- Added spamfilter system. This is an attempt to fight spam, advertising, worms, etc..
  It's much like badwords but allows you to choose multiple targets (eg: private,
  channel, notice, etc) and various actions (eg: block, kline, gline, kill, etc).
  You can use the /spamfilter command to add network-wide spamfilters, but you
  can also use spamfilter { } config blocks to create local spamfilters.
  Additionally, set::spamfilter::ban-time (duration of *lines added by spamfilter)
  and set::spamfilter::ban-reason (*line reason if banned) are added.
  See the documentation for more information (section 3.14).
  This system needs some additional testing, I'm sure there will be bugs ;).
- Fixed a problem with /stats [G|s] extended flags parsing.
- internal: added sendnotice()
- win32 compile fix (typo)
- added set::spamfilter::* to docs
- updated /stats help and docs on '/stats f'
- Fixed '/SetHost Error' flood from all servers in some circumstances like re-opering,
  reported by blotter45 (#0001400).
- Made ./Config remember the libcurl directory, reported by ace (#0001505).
- Fixed a problem with the snprintf() check, reported by virusx (#0001510).
- Fixed a bug where multiple spaces could appear in a MODE message, reported by Airnike
  (#0001169).
- Fixed a bug with SSL remaining enabled even when the headers are not found, reported by
  AngryWolf (#0000863)
- Added can_setq/q for regulating which opers can set umode +q, requested by cfreak202
  (#0000478)
- Added HOOKTYPE_TKL_EXCEPT (arg: cptr, tkline) which is called from find_tkline_match
  and find_tkline_match_zap. This can be used to add custom TKL exceptions.
- Fixed possible compile bug (caused by HOOKTYPE_TKL_EXCEPT).
- Cosmetic 'stats /zip' output change (#0001435).
- Made services admins able to see on which channel services bots are, just
  like a netadmins can, suggested by EviL_SmUrF (#0001481).